# rust-web-crawler

./: Cargo.toml  Makefile  README.md
src/: crawler.rs  main.rs
