[package]
name = "rust-web-crawler"
version = "0.1.0"
authors = ["horvatic <shorvatic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
html-escape = { version = "*", default-features = false}
